# kaypro-usb-keyboard-adapter

./: .gitignore  CMakeLists.txt  README.md  hid-conversion-table.ods  tusb_config.h
hardware/: fp-lib-table  kaypro-usb.kicad_prl  kaypro-usb.kicad_pro  kaypro-usb.kicad_sch  sym-lib-table
src/: buzzer.c  buzzer.h  cdc.cpp  cdc.hpp  config.h  hid.cpp  hid.hpp  kaypro.c  kaypro.h  keyboard.c  keyboard.h  keycodes.h  led.c  led.h  main.c  main.cpp  uart.c  uart.cpp  uart.h  uart.hpp
tests/: buzzer.py
